--- a/diary_front/public/index.html
+++ b/diary_front/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <style>
-      body, h1, h2, h3, h4, h5, h6, p, span, button {
+      body, h1, h2, h3, h4, h5, h6, p, span, button, input, textarea{
         font-family: "Cute Font"!important;
       }
     </style>
